<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.ramya.savaari.ui.activities.SignUpActivity">

    <LinearLayout
        android:id="@+id/activity_sign_up_llBackground"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp">

        <RelativeLayout
            android:id="@+id/activity_sign_up_rlUploadImage"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/activity_sign_up_ivProfileImage"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:src="@drawable/user_profile_image" />

            <ImageButton
                android:id="@+id/activity_sign_up_ibUploadImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:src="@drawable/camera" />
        </RelativeLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/activity_sign_up_etFirstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_fname" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/activity_sign_up_etLastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_lname" />

        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/activity_sign_up_tvGender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gender" />

        <RadioGroup
            android:id="@+id/activity_sign_up_rgGender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/activity_sign_up_rbFemale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/female" />

            <RadioButton
                android:id="@+id/activity_sign_up_rbMale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/male" />

        </RadioGroup>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/activity_sign_up_etSetDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_dob"
                android:inputType="date" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/activity_sign_up_etAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_address" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/activity_sign_up_etCity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_city" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/activity_sign_up_etCountry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_country" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/activity_sign_up_etPhoneNo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_phoneNo"
                android:inputType="phone" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/activity_sign_up_etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_email"
                android:inputType="textEmailAddress" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/activity_sign_up_etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_password"
                android:inputType="textPassword" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/activity_sign_up_etConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/confirm_password"
                android:inputType="textPassword" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/activity_sign_up_btnSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_button"
            android:text="@string/sign_up"
            android:textColor="@color/colorPrimaryText" />

    </LinearLayout>

</ScrollView>
