<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp"
    tools:context="com.example.ramya.savaari.ui.activities.UpdateVehicleActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/activity_update_vehicle_etModel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_model" />

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/activity_update_vehicle_etBrand"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_brand" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/activity_update_vehicle_etColour"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_colour" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/activity_update_vehicle_etYear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_year"
                android:inputType="number" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/activity_update_vehicle_etPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_price"
                android:inputType="number" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/activity_update_vehicle_btnUpdateVehicle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/update_vehicle" />
    </LinearLayout>

</ScrollView>