<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp"
    tools:context="com.example.ramya.savaari.ui.activities.AddVehicleActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/activity_add_vehicle_ivAddImage"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/camera64" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/activity_add_vehicle_rcvImageList"
            android:layout_width="wrap_content"
            android:visibility="gone"
            android:layout_height="150dp" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/activity_add_vehicle_etModel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_model" />

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/activity_add_vehicle_etBrand"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_brand" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/activity_add_vehicle_etColour"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_colour" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/activity_add_vehicle_etYear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:hint="@string/enter_year" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/activity_add_vehicle_etPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:hint="@string/enter_price" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/activity_add_vehicle_btnAddVehicle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_vehicle" />
    </LinearLayout>

</ScrollView>
