<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.ramya.savaari.ui.activities.UpdateUserActivity">

    <LinearLayout
        android:id="@+id/activity_update_user_llBackground"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp">

        <RelativeLayout
            android:id="@+id/activity_update_user_rlUploadImage"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/activity_update_user_ivProfileImage"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:src="@drawable/user_profile_image" />

            <ImageButton
                android:id="@+id/activity_update_user_ibUploadImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:src="@drawable/camera" />
        </RelativeLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/activity_update_user_etFirstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_fname" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/activity_update_user_etLastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_lname" />

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/activity_update_user_etSetDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_dob"
                android:inputType="date" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/activity_update_user_etAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_address" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/activity_update_user_etCity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_city" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/activity_update_user_etCountry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_country" />
        </android.support.design.widget.TextInputLayout>

        <!--<android.support.design.widget.TextInputLayout-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content">-->

            <!--<android.support.design.widget.TextInputEditText-->
                <!--android:id="@+id/activity_update_user_etPhoneNo"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:hint="@string/enter_phoneNo"-->
                <!--android:inputType="phone" />-->
        <!--</android.support.design.widget.TextInputLayout>-->

        <!--<android.support.design.widget.TextInputLayout-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content">-->

            <!--<android.support.design.widget.TextInputEditText-->
                <!--android:id="@+id/activity_update_user_etEmail"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:hint="@string/enter_email"-->
                <!--android:inputType="textEmailAddress" />-->
        <!--</android.support.design.widget.TextInputLayout>-->

        <Button
            android:id="@+id/activity_update_user_btnUpdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_button"
            android:text="@string/update_profile"
            android:textColor="@color/colorPrimaryText" />

    </LinearLayout>

</ScrollView>
