<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login_rlBackgroundLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:backgroundTint="#80000000"
    android:backgroundTintMode="src_atop"
    android:padding="20dp"
    tools:context="com.example.ramya.savaari.ui.activities.LoginActivity">

    <TextView
        android:id="@+id/activity_login_tv_appName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/blackjack"
        android:text="@string/app_name"
        android:textColor="@color/colorPrimaryText"
        android:textSize="70sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/activity_login_ll_login"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_centerInParent="true"
        android:background="@drawable/custom_border"
        android:backgroundTint="#80000000"
        android:gravity="center"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/colorPrimaryLight">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/activity_login_etPhoneNo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/user"
                android:drawablePadding="5dp"
                android:hint="@string/enter_phoneNo"
                android:inputType="phone"
                android:textColor="@color/colorPrimaryText" />
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/colorPrimaryLight">

                <com.scottyab.showhidepasswordedittext.ShowHidePasswordEditText
                    android:id="@+id/activity_login_etPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/unlocked"
                    android:drawablePadding="5dp"
                    android:ems="10"
                    android:fontFamily="sans-serif"
                    android:hint="@string/enter_password"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:textColor="@color/colorPrimaryText"
                    app:additionalTouchTargetSize="50dp"
                    app:drawable_hide="@drawable/hide"
                    app:drawable_show="@drawable/eye" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>


    </LinearLayout>

    <Button
        android:id="@+id/activity_login_btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/activity_login_ll_login"
        android:layout_marginTop="15dp"
        android:background="@drawable/rounded_button"
        android:text="@string/login"
        android:textColor="@color/colorPrimaryText"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tv_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/activity_login_btn_login"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:clickable="true"
        android:text="@string/signup"
        android:textColor="@color/colorPrimaryText"
        android:textSize="@dimen/signup" />
</RelativeLayout>
